fix safari issue with image stretching

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -42,7 +42,7 @@
     width: 90%;
   }
 
-// larger screen
+// small screen
 @media only screen and (max-width: 768px) {
 
   .carousel-inside {
@@ -66,7 +66,12 @@
     width: 30%;
     margin-bottom: 2rem;
     margin-top: 2rem;
+    height: auto;
   }
 
-
+  .mobile-content-center {
+    justify-content: center;
+  }
 }
+
+//  align-items-start to fix Image stretching in flexbox in Safari
